<resources>
    <string name="app_name">resep.ai</string>
    <string name="title_home">Home</string>
    <string name="title_cart">Cart</string>
    <string name="title_history">History</string>
    <string name="title_favorite">Favorite</string>
    <string name="title_profile">Profile</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="signup">Sign Up</string>
    <string name="title_login_page">Log in</string>
    <string name="title_register_page">Register</string>
    <string name="do_not_have_an_account">Don\'t have an account?</string>
    <string name="most_liked">Most Liked</string>
    <string name="show_all">Show All</string>
    <string name="category">Category</string>
    <string name="search">Search</string>
    <string-array name="data_recipe_title">
        <item>Fried Wontons</item>
        <item>Fruit Salad</item>
        <item>Garlic Herb Cheese Bombs</item>
        <item>Mini Quiches</item>
        <item>Nyonya Kuih Pie Tee</item>
        <item>Parmesan Sweet Potato Cheese</item>
        <item>Parmesan Zucchini Chips</item>
        <item>Spring Rolls</item>
    </string-array>
    <string-array name="data_recipe_description">
        <item>Homemade, crispy and delicious wontons with simple everyday ingredients. Learn how to make wontons with this easy Chinese recipe.</item>
        <item>Fruit Salad Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce cursus leo augue, ut mollis odio rutrum ac. Nullam laoreet lectus vel luctus dapibus. Ut consectetur augue eu consequat gravida.</item>
        <item>Garlic Herb Cheese Bombs Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce cursus leo augue, ut mollis odio rutrum ac. Nullam laoreet lectus vel luctus dapibus. Ut consectetur augue eu consequat gravida.</item>
        <item>Mini Quiches Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce cursus leo augue, ut mollis odio rutrum ac. Nullam laoreet lectus vel luctus dapibus. Ut consectetur augue eu consequat gravida.</item>
        <item>Nyonya Kuih Pie Tee Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce cursus leo augue, ut mollis odio rutrum ac. Nullam laoreet lectus vel luctus dapibus. Ut consectetur augue eu consequat gravida.</item>
        <item>Parmesan Sweet Potato Cheese Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce cursus leo augue, ut mollis odio rutrum ac. Nullam laoreet lectus vel luctus dapibus. Ut consectetur augue eu consequat gravida.</item>
        <item>Parmesan Zucchini Chips Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce cursus leo augue, ut mollis odio rutrum ac. Nullam laoreet lectus vel luctus dapibus. Ut consectetur augue eu consequat gravida.</item>
        <item>Spring Rolls Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce cursus leo augue, ut mollis odio rutrum ac. Nullam laoreet lectus vel luctus dapibus. Ut consectetur augue eu consequat gravida.</item>
    </string-array>
    <string-array name="data_recipe_ingredients">
        <item>200g chicken, 100g shrimp, ½ teaspoon soy sauce, ½ teaspoon sesame oil, 3 dashes ground white pepper, 400ml water, 450ml vegetable oil</item>
        <item>200g chicken, 100g shrimp, ½ teaspoon soy sauce, ½ teaspoon sesame oil, 3 dashes ground white pepper, 400ml water, 450ml vegetable oil</item>
        <item>200g chicken, 100g shrimp, ½ teaspoon soy sauce, ½ teaspoon sesame oil, 3 dashes ground white pepper, 400ml water, 450ml vegetable oil</item>
        <item>200g chicken, 100g shrimp, ½ teaspoon soy sauce, ½ teaspoon sesame oil, 3 dashes ground white pepper, 400ml water, 450ml vegetable oil</item>
        <item>200g chicken, 100g shrimp, ½ teaspoon soy sauce, ½ teaspoon sesame oil, 3 dashes ground white pepper, 400ml water, 450ml vegetable oil</item>
        <item>200g chicken, 100g shrimp, ½ teaspoon soy sauce, ½ teaspoon sesame oil, 3 dashes ground white pepper, 400ml water, 450ml vegetable oil</item>
        <item>200g chicken, 100g shrimp, ½ teaspoon soy sauce, ½ teaspoon sesame oil, 3 dashes ground white pepper, 400ml water, 450ml vegetable oil</item>
        <item>200g chicken, 100g shrimp, ½ teaspoon soy sauce, ½ teaspoon sesame oil, 3 dashes ground white pepper, 400ml water, 450ml vegetable oil</item>
    </string-array>
</resources>