<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="56dp"
    tools:context=".ui.home.HomeFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <FrameLayout
                android:id="@+id/frameLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/banner" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="1"
                    android:focusable="true"
                    android:focusableInTouchMode="true" >
                    <EditText
                        android:id="@+id/et_search_recipe"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:background="@color/main_background"
                        android:layout_marginTop="16dp"
                        android:layout_marginStart="16dp"
                        android:layout_weight="1"
                        android:hint="@string/search"
                        android:drawableLeft="@drawable/ic_baseline_search_24"
                        android:paddingHorizontal="16dp"
                        android:drawablePadding="16dp"
                        android:maxLines="1"
                        android:inputType="text"
                        android:imeOptions="actionSearch"/>
                    <com.google.android.material.divider.MaterialDivider
                        android:layout_width="1dp"
                        android:layout_height="0dp"/>

                    <ImageButton
                        android:id="@+id/btn_camera"
                        android:layout_width="wrap_content"
                        android:layout_height="48dp"
                        android:src="@drawable/ic_baseline_camera_alt_24"
                        android:layout_weight="1"
                        android:layout_marginTop="16dp"
                        android:layout_marginRight="16dp"
                        android:paddingHorizontal="16dp"
                        android:background="@color/main_background"/>
                </LinearLayout>

            </FrameLayout>

            <TextView
                android:id="@+id/tv_most_liked"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:fontFamily="@font/inter_bold"
                android:text="@string/most_liked"
                android:textColor="@color/main_text_color"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/frameLayout" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_most_liked"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="8dp"
                android:paddingRight="16dp"
                android:clipToPadding="false"
                app:layout_constraintTop_toBottomOf="@+id/tv_most_liked" />

            <TextView
                android:id="@+id/tv_category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:fontFamily="@font/inter_bold"
                android:text="@string/category"
                android:textColor="@color/main_text_color"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rv_most_liked" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:paddingBottom="16dp"
                android:nestedScrollingEnabled="false"
                android:clipToPadding="false"
                app:layout_constraintTop_toBottomOf="@+id/tv_category" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</FrameLayout>